# PolyatomicComplexes

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_graph.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: actions.yml  build.yml  build_graph.yml  build_mat.yml  ci.yml  sanity.yml
dataset/construct/: atom_lookup.pkl  lookup_map.json
dataset/esol/: deep_complex_lookup_repn.pkl  fast_complex_lookup_repn.pkl
dataset/free_solv/: deep_complex_lookup_repn.pkl  fast_complex_lookup_repn.pkl  stacked_complex_lookup_repn.pkl
dataset/lipophilicity/: Lipophilicity.csv  deep_complex_lookup_repn.pkl  fast_complex_lookup_repn.pkl
dataset/mp_matbench_jdft2d/: deep_complex_lookup_repn.pkl  jdft2d.csv
dataset/photoswitches/: deep_complex_lookup_repn.pkl  fast_complex_lookup_repn.pkl  stacked_complex_lookup_repn.pkl
experiments/: esol_experiment.py  freesolv_experiment.py  gaussian_process.py  jdft2d_matbench_experiment.py  kernels.py  lipophilicity_experiment.py  load_process_data.py  matbench_experiment.py  materials_project_experiment.py  metrics.py  mp_matbench_experiment.py  photoswitches_experiment.py
gauche_utils/: data_utils.py
polyatomic_complexes/: __init__.py
polyatomic_complexes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
polyatomic_complexes/dataset/esol/: ESOL.csv  deep_complex_lookup_repn.pkl  dimension_complex_lookup_repn.pkl  stacked_complex_lookup_repn.pkl
polyatomic_complexes/dataset/free_solv/: FreeSolv.csv  dimension_complex_lookup_repn.pkl
polyatomic_complexes/dataset/lipophilicity/: Lipophilicity.csv  stacked_complex_lookup_repn.pkl
polyatomic_complexes/dataset/materials_project/: fast_complex_lookup_repn.pkl  materials_data.csv
polyatomic_complexes/dataset/mp_matbench_jdft2d/: fast_complex_lookup_repn.pkl  jdft2d.csv  matbench_jdft2d.json  stacked_complex_lookup_repn.pkl
polyatomic_complexes/dataset/photoswitches/: dimension_complex_lookup_repn.pkl  fast_complex_lookup_repn.pkl  photoswitches.csv
polyatomic_complexes/experiments/: __init__.py  esol_experiment.py  freesolv_experiment.py  gaussian_process.py  jdft2d_matbench_experiment.py  lipophilicity_experiment.py  load_process_data.py  materials_project_experiment.py  metrics.py  mp_matbench_experiment.py  photoswitches_experiment.py
polyatomic_complexes/src/: __init__.py
polyatomic_complexes/src/complexes/: __init__.py  atomic_complex.py  build_atom_lookup.py  core_utils.py  general_utils.py  polyatomic_complex.py  process_esol.py  process_freesolv.py  process_lipophilicity.py  process_materials_project.py  process_mp_jdft2d.py  process_photoswitches.py
polyatomic_complexes/src/complexes.egg-info/: PKG-INFO  top_level.txt
polyatomic_complexes/tests/: test_atoms.py  test_polyatoms.py
requirements/: requirements.txt  requirements_graph.txt  requirements_mat.txt
results/ESOL/GRAPHS_Results/: GRAPHS_1711152515.371928.txt
results/ESOL/SELFIES_Results/: SELFIES_1711152321.078135.txt
results/ESOL/SMILES_Results/: SMILES_1712086944.332004.txt  SMILES_1712114188.379835.txt
results/ESOL/deep_complexes_Results/: deep_complexes_1711152076.931905.txt
results/ESOL/fast_complexes_Results/: complexes_1711151951.577277.txt
results/ESOL/fingerprints_Results/: fingerprints_1711152211.93453.txt  fingerprints_1712113876.809261.txt
results/FreeSolv/GRAPHS_Results/: GRAPHS_1711153162.3222091.txt
results/FreeSolv/SELFIES_Results/: SELFIES_1711153120.637068.txt
results/FreeSolv/SMILES_Results/: SMILES_1712087000.134867.txt
results/FreeSolv/deep_complexes_Results/: deep_complexes_1711153048.694051.txt  deep_complexes_1712114378.2604108.txt
results/FreeSolv/fast_complexes_Results/: complexes_1711152995.975313.txt  complexes_1712114347.381381.txt
results/FreeSolv/fingerprints_Results/: fingerprints_1711153085.089773.txt
results/JDFT2D/deep_complexes_Results/: deep_complexes_1711937164.402448.txt  deep_complexes_1712199443.001087.txt
results/JDFT2D/fast_complexes_Results/: complexes_1711936013.154729.txt
results/Lipophilicity/GRAPHS_Results/: GRAPHS_1711157562.937286.txt
results/Lipophilicity/SELFIES_Results/: SELFIES_1711156981.981493.txt
results/Lipophilicity/SMILES_Results/: SMILES_1712087344.562968.txt  SMILES_1712116110.7787561.txt
results/Lipophilicity/deep_complexes_Results/: deep_complexes_1711156154.5711339.txt  deep_complexes_1712115120.457653.txt
results/Lipophilicity/fast_complexes_Results/: complexes_1711155898.561148.txt
results/Lipophilicity/fingerprints_Results/: fingerprints_1711156711.5967228.txt
results/MP_MatBench/fast_complexes_Results/: complexes_1711731815.657061.txt
results/Materials Project/fast_complexes_N_20_Results/: complexes_1711588977.4204226.txt
results/Materials Project/fast_complexes_Results/: complexes_1711582663.9500911.txt
results/Materials Project/fast_complexes_Results_n_7/: complexes_1712176224.362768.txt
results/Photoswitches/: result_trial_1_1711077530.924664.txt  result_trial_1_1711077887.8662999.txt  result_trial_3_1711077758.241029.txt
results/Photoswitches/GRAPHS_Results/: GRAPHS_1711142456.879305.txt  GRAPHS_1712113437.722272.txt
results/Photoswitches/SELFIES_Results/: SELFIES_1711141849.878203.txt  SELFIES_1712113325.7764401.txt
results/Photoswitches/SMILES_Results/: SMILES_1712086548.0502641.txt
results/Photoswitches/deep_complexes_Results/: deep_complexes_1711143420.3105989.txt
sanity_testing_build/: test.py
src/: atomic_complex.py  build_atom_lookup.py  building_blocks.py  core_utils.py  general_utils.py  polyatomic_complex.py  process_esol.py  process_freesolv.py  process_lipophilicity.py  process_materials_project.py  process_photoswitches.py
src/complexes/: atomic_complex.py  build_atom_lookup.py  building_blocks.py  core_utils.py  general_utils.py  polyatomic_complex.py  process_esol.py  process_freesolv.py  process_lipophilicity.py  process_materials_project.py  process_mp_jdft2d.py  process_photoswitches.py
src/complexes.egg-info/: SOURCES.txt
tests/: test_atoms.py  test_polyatoms.py
(+20 files in other folders)
