[build-system]
requires = ["setuptools>=42.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyatomic_complexes"
version = "1.0.0"

[tools.pytest.ini_options]
adopts = '--cov=polyatomic_complexes/src/complexes'
testpaths = [
    "polyatomic_complexes/tests"
]

[mypy]
mypy_path = "./polyatomic_complexes"
check_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
show_error_codes = true
ignore_errors = true