[build-system]
requires = ["setuptools>=42.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polyatomic_complexes"
version = "1.0.0"

[tools.pytest.ini_options]
adopts = '--cov=polyatomic_complexes/src/complexes'
testpaths = [
    "polyatomic_complexes/tests",
    "sanity_testing_build"
]
authors = [
    {name = "Rahul Khorana", email = "rahul.khorana.email@gmail.com"},
]
description = "A system for modeling atomistic environments as described in the referenced research paper."
readme = "README.md"
requires-python = ">=3.11.6"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch",
    "jax",
    "jaxlib",
    "rdkit",
    "dill",
    "pandas",
    "gpytorch",
    "botorch",
    "pymatgen",
    "gauche",
    "pytest==8.1.1",
    "pytest-cov==5.0.0",
    "flake8==7.0.0",
    "mypy==1.9.0",
    "pyglview",
    "gmsh",
    "git-lfs",
]
dynamic = ["version"]


[mypy]
mypy_path = "./polyatomic_complexes"
check_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
show_error_codes = true
ignore_errors = true