[metadata]
name = complexes
description = atomistic system modeling
author = Rahul Khorana
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers = 
    Programming Language :: Python :: 3.11

[options]
packages = 
    complexes
install_requires = 
    requests >= 2
python_requires = >= 3.11
package_dir = src
zip_safe = no

[flake8]
max-line-length = 160

[mypy]
ignore_missing_imports = True
ignore_errors = True